package com.yonatankarp.factorymethod

/**
 * Weapon interface.
 */
internal interface Weapon {
    val weaponType: WeaponType
}
